// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Blocks Component matches error snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="blocks"
      >
        <h2>
          Blocks
        </h2>
        <span
          class="error"
        >
          Error: 
          Something went wrong! Please refresh.
        </span>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="blocks"
    >
      <h2>
        Blocks
      </h2>
      <span
        class="error"
      >
        Error: 
        Something went wrong! Please refresh.
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Blocks Component matches loading snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="blocks"
      >
        <h2>
          Blocks
        </h2>
        <span>
          Loading...
        </span>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="blocks"
    >
      <h2>
        Blocks
      </h2>
      <span>
        Loading...
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Blocks Component matches rendered snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="blocks"
      >
        <h2>
          Blocks
        </h2>
        <div
          class="data-container"
        >
          <div
            class="info-row"
          >
            <div>
              <span>
                Block
              </span>
              <span>
                12345
              </span>
            </div>
            <div>
              <span>
                Mined on
              </span>
              <span>
                17/6/2022 19:6:52
              </span>
            </div>
            <div>
              <span>
                Gas Used
              </span>
              <span>
                4518720 of 30029266
              </span>
            </div>
            <a
              class="button"
              href="/12345"
            >
              2
               transactions
            </a>
          </div>
        </div>
        <div
          class="data-container"
        >
          <div
            class="info-row"
          >
            <div>
              <span>
                Block
              </span>
              <span>
                12346
              </span>
            </div>
            <div>
              <span>
                Mined on
              </span>
              <span>
                17/6/2022 19:8:32
              </span>
            </div>
            <div>
              <span>
                Gas Used
              </span>
              <span>
                4518720 of 30029266
              </span>
            </div>
            <a
              class="button disabled"
              href="/12346"
            >
              No
               transactions
            </a>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="blocks"
    >
      <h2>
        Blocks
      </h2>
      <div
        class="data-container"
      >
        <div
          class="info-row"
        >
          <div>
            <span>
              Block
            </span>
            <span>
              12345
            </span>
          </div>
          <div>
            <span>
              Mined on
            </span>
            <span>
              17/6/2022 19:6:52
            </span>
          </div>
          <div>
            <span>
              Gas Used
            </span>
            <span>
              4518720 of 30029266
            </span>
          </div>
          <a
            class="button"
            href="/12345"
          >
            2
             transactions
          </a>
        </div>
      </div>
      <div
        class="data-container"
      >
        <div
          class="info-row"
        >
          <div>
            <span>
              Block
            </span>
            <span>
              12346
            </span>
          </div>
          <div>
            <span>
              Mined on
            </span>
            <span>
              17/6/2022 19:8:32
            </span>
          </div>
          <div>
            <span>
              Gas Used
            </span>
            <span>
              4518720 of 30029266
            </span>
          </div>
          <a
            class="button disabled"
            href="/12346"
          >
            No
             transactions
          </a>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
